--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -121,7 +121,11 @@
         </div>
 
         <!-- Продукти -->
-        <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">Популярні товари</h2>
+        {% if not current_category %}
+            <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">Популярні товари</h2>
+        {% else %}
+            <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">{{ current_category }}</h2>
+        {% endif %}
         <div class="overflow-x-auto">
             <div class="flex flex-wrap gap-4 pb-6">
                 {% if products %}
