change login url

--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -205,7 +205,7 @@
                 </a>
                 {% else %}
                 <button id="nafig_modal" style="padding: 5px;">
-                    <a href="{% url 'login' %}">
+                    <a href="{% url 'login_email' %}">
                         <img src="{% static 'images/free-icon-font-user.png' %}" alt="User Icon" width="25"
                             height="25" />
                     </a>
