--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -389,6 +389,8 @@
         const promoInput = document.getElementById('promoInput');
         const applyPromoBtn = document.getElementById('applyPromoBtn');
 
+        const openAuthmodal = document.getElementById('');
+
         let cart = new Map();
         let discount = 0;
 
