--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -160,7 +160,7 @@
                                 </p>
 
                                 <!-- Brand & Size -->
-                                <p class="text-xs text-center text-gray-500 mt-1">
+                                <p class="text-xs text-left text-gray-500 mt-1">
                                     {{ product.brand|default:"" }} {{ product.size|default:"" }}
                                 </p>
 
