добавив livesupp. відредагував titles.

--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{% block title %}{% endblock %}Life With Vicky</title>
+    <title>Tingo Магазини</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     {% block canonical %}{% endblock %}
     {% block opengraph %}{% endblock %}
