--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -20,7 +20,7 @@
         </p>
 
         <!-- Ціна -->
-        <p class="text-3xl font-semibold text-green-60 mb-4">${{ product.price }}</p>
+        <p class="text-3xl font-semibold text-green-60 mb-4">{{ product.price }} ₴</p>
 
         <!-- Категорія -->
         <p class="text-sm text-gray-500 mb-4">Категорія: {{ product.category }}</p>
