--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -134,8 +134,8 @@
                             <div class="w-[200px] bg-white rounded-2xl p-4 shadow-md hover:shadow-xl transition-all duration-300 ease-in-out transform hover:-translate-y-1 relative">
 
 <!-- Favorite Icon -->
-      <div class="absolute top-2 right-2 text-orange-500 hover:text-orange-600 cursor-pointer"
-           onclick="toggleFavorite({{ product.id }}, this)">
+      <div class="absolute top-2 right-2 text-orange-500 hover:text-orange-600 cursor-pointer
+           onclick= toggleFavorite({{ product.id }}, this)">
           {% if product.id in favorited_ids %}
               <i class="fas fa-heart"></i>   <!-- filled heart -->
           {% else %}
