--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -122,7 +122,7 @@
 
         <!-- Продукти -->
         {% if not current_category %}
-            <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">Популярні товари</h2>
+            <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">Популярні товар</h2>
         {% else %}
             <h2 class="text-2xl font-bold mx-6 mb-6 mt-6">{{ current_category }}</h2>
         {% endif %}
