--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -256,7 +256,7 @@
                         <span>Чат з TinGo</span>
                     </a> {% endcomment %}
 
-                    <button 
+                    <button onclick="openCatalogModal()"
                         class="flex-1 flex items-center justify-center gap-2 hover:text-green-600">
                         <i class="fa-solid fa-table-cells-large"></i>
                         <span>Каталог</span>
