--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -130,18 +130,19 @@
             <div class="flex flex-wrap gap-4 pb-6">
                 {% if products %}
                     {% for product in products %}
-                        {% if product.price >= min_price_selected|default:0 %}
+                        {% if product.available and product.price >= min_price_selected|default:0 %}
                             <div class="w-[200px] bg-white rounded-2xl p-4 shadow-md hover:shadow-xl transition-all duration-300 ease-in-out transform hover:-translate-y-1 relative">
 
 <!-- Favorite Icon -->
-      <div class="absolute top-2 right-2 text-orange-500 hover:text-orange-600 cursor-pointer
-           onclick=toggleFavorite({{ product.id }}, this)">
-          {% if product.id in favorited_ids %}
-              <i class="fas fa-heart"></i>   <!-- filled heart -->
-          {% else %}
-              <i class="far fa-heart"></i>   <!-- empty heart -->
-          {% endif %}
-      </div>
+<div class="absolute top-2 right-2 text-orange-500 hover:text-orange-600 cursor-pointer"
+     onclick="toggleFavorite({{ product.id }}, this)">
+    {% if product.id in favorited_ids %}
+        <i class="fas fa-heart"></i>   <!-- filled heart -->
+    {% else %}
+        <i class="far fa-heart"></i>   <!-- empty heart -->
+    {% endif %}
+</div>
+
 
 
 
@@ -242,6 +243,12 @@ async function toggleFavorite(productId, el) {
 
         let data = await response.json();
 
+        if (data.login_required) {
+            if (confirm("You need to log in to use favorites. Go to login page?")) {
+                window.location.href = "/login_phone_request/?next=/" + window.location.pathname;
+            }
+            return;
+        }
         let icon = el.querySelector("i");
         if (data.favorited) {
             icon.classList.remove("far");
